syntax = "proto3";

package com.hugo.demo.api.liveItemPrice;

option java_multiple_files = true;


message LiveItemPriceAPIResponseDTO {
  string date = 1;
  string weight_unit = 2;
  double ask = 3;
  double mid = 4;
  double bid = 5;
  double value = 6;
  double performance = 7;
  string metal_id = 8;
  int64  provider_id = 9;
}
