syntax = "proto3";

package com.hugo.demo.api.wallet;

option java_multiple_files = true;


message CreateWalletRequestDTO {
  int64 user_id = 1;
  double wallet_balance = 2;
  string currency_code = 3;
}

message EditWalletRequestDTO {
  int64 user_id = 1;
  int64 wallet_id = 2;
  double wallet_balance = 3;
  string currency_code = 4;
}

message WalletResponseDTO {
  int64 user_id = 1;
  int64 wallet_id = 2;
  double wallet_balance = 3;
}